:bug: Fix social link layout issue

--- a/styles/gradient.scss
+++ b/styles/gradient.scss
@@ -20,10 +20,6 @@
 }
 
 .gradient-box {
-  display: flex;
-  align-items: center;
-  margin: auto;
-
   position: relative;
   padding: 0.75em;
   box-sizing: border-box;
